# bm_poseur

./: .gitignore  .testr.conf  README  bm_poseur  setup.cfg  setup.py
bm_poseur/: actions.py
bmposeur/: __init__.py  settings.py
lib/: __init__.py  actions.py  args.py  settings.py  template.xml
lib/tests/: test_actions.py  test_args.py
