[metadata]
name = bm_poseur
version = 0.0.1
summary = A CLI utility for creating a virtual bare metal cluster on an isolated bridge network.
description-file =
    README
author = HP Cloud Services
author_email = openstack-dev@lists.openstack.org
license: Apache License (2.0)
home-page = https://github.com/tripleo/bm_poseur
classifier =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Other
    Environment :: Console

[files]
packages =
    baremetal

scripts =
    bin/bm_poseur

[global]
setup-hooks =
    pbr.hooks.setup_hook